--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
+    "@pinata/sdk": "^1.1.26",
     "add": "^2.0.6",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
@@ -14,6 +15,7 @@
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.12",
     "hardhat-gas-reporter": "^1.0.8",
+    "path": "^0.12.7",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-dev.23",
     "solhint": "^3.3.7",
